--- a/src/content/docs/en/monocular-depth-estimation.mdx
+++ b/src/content/docs/en/monocular-depth-estimation.mdx
@@ -10,6 +10,7 @@ Research questions:
 
 
 Collection of papers (dates from last revision):
+- (2005) [Learning Depth from Single Monocular Images](https://papers.nips.cc/paper_files/paper/2005/file/17d8da815fa21c57af9829fb0a869602-Paper.pdf)
 - (Jun 2014) @eigenDepthMapPrediction2014 [Depth Map Prediction from a Single Image using a Multi-Scale Deep Network](https://arxiv.org/pdf/1406.2283) [ref in: @bhoiMonocularDepthEstimation2019, @zhaoMonocularDepthEstimation2020]
     - From KITTI: 28 scenes for training and 28 for testing
 - (Dec 2015) [Predicting depth, surface normals and semantic labels with a common multi-scale convolutional architecture](https://arxiv.org/pdf/1411.4734) [ref in: @bhoiMonocularDepthEstimation2019]
@@ -52,7 +53,7 @@ Deep Learning tools:
 
 - [Monocular Depth Estimation: A Survey by Amlaan Bhoi](https://arxiv.org/abs/1901.09402)
 - (Jul 2020) [Monocular Depth Estimation Based On Deep Learning: An Overview](https://arxiv.org/pdf/2003.06620)
-- [TO READ] [How Do Neural Networks See Depth in Single Images?](https://openaccess.thecvf.com/content_ICCV_2019/papers/van_Dijk_How_Do_Neural_Networks_See_Depth_in_Single_Images_ICCV_2019_paper.pdf)
+- [TO READ] @vandijkHowNeuralNetworks2019 [How Do Neural Networks See Depth in Single Images?](https://openaccess.thecvf.com/content_ICCV_2019/papers/van_Dijk_How_Do_Neural_Networks_See_Depth_in_Single_Images_ICCV_2019_paper.pdf)
 
 ## Datasets
 
