--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -203,6 +203,8 @@ Topics:
 - invalid pointers and null pointers
 - pointers to functions
 
+Example of good taste in code: [Linked lists, pointer tricks and good taste](https://github.com/mkirchner/linked-list-good-taste)
+
 ## Dynamic Memory
 
 (not this time)
