add citation support

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -87,3 +87,79 @@
   year = {2024},
   archiveID = {arXiv:2410.02073},
 }
+@preprint{eigenDepthMapPrediction2014,
+  year = {2014},
+  archiveID = {arXiv:1406.2283},
+  title = {Depth Map Prediction from a Single Image using a Multi-Scale Deep Network},
+  author = {Eigen, David and Puhrsch, Christian and Fergus, Rob},
+  abstractNote = {Predicting depth is an essential component in understanding the 3D geometry of a scene. While for stereo images local correspondence sufﬁces for estimation, ﬁnding depth relations from a single image is less straightforward, requiring integration of both global and local information from various cues. Moreover, the task is inherently ambiguous, with a large source of uncertainty coming from the overall scale. In this paper, we present a new method that addresses this task by employing two deep network stacks: one that makes a coarse global prediction based on the entire image, and another that reﬁnes this prediction locally. We also apply a scale-invariant error to help measure depth relations rather than scale. By leveraging the raw datasets as large sources of training data, our method achieves state-of-the-art results on both NYU Depth and KITTI, and matches detailed depth boundaries without the need for superpixelation.},
+  libraryCatalog = {arXiv.org},
+  extra = {arXiv:1406.2283 [cs]},
+  key = {TCZ78FYN},
+  repository = {arXiv},
+  accessDate = {2023-08-10 12:19:39},
+  language = {en},
+  url = {http://arxiv.org/abs/1406.2283},
+  date = {2014-06-09 2014-06-09},
+}
+@journalArticle{zhaoMonocularDepthEstimation2020,
+  libraryCatalog = {arXiv.org},
+  pages = {1612-1627},
+  author = {Zhao, Chaoqiang and Sun, Qiyu and Zhang, Chongzhen and Tang, Yang and Qian, Feng},
+  extra = {arXiv:2003.06620 [cs]},
+  url = {http://arxiv.org/abs/2003.06620},
+  publicationTitle = {Science China Technological Sciences},
+  language = {en},
+  abstractNote = {Depth information is important for autonomous systems to perceive environments and estimate their own state. Traditional depth estimation methods, like structure from motion and stereo vision matching, are built on feature correspondences of multiple viewpoints. Meanwhile, the predicted depth maps are sparse. Inferring depth information from a single image (monocular depth estimation) is an ill-posed problem. With the rapid development of deep neural networks, monocular depth estimation based on deep learning has been widely studied recently and achieved promising performance in accuracy. Meanwhile, dense depth maps are estimated from single images by deep neural networks in an end-to-end manner. In order to improve the accuracy of depth estimation, different kinds of network frameworks, loss functions and training strategies are proposed subsequently. Therefore, we survey the current monocular depth estimation methods based on deep learning in this review. Initially, we conclude several widely used datasets and evaluation indicators in deep learning-based depth estimation. Furthermore, we review some representative existing methods according to different training manners: supervised, unsupervised and semisupervised. Finally, we discuss the challenges and provide some ideas for future researches in monocular depth estimation.},
+  accessDate = {2024-06-14 06:36:43},
+  ISSN = {1674-7321, 1869-1900},
+  volume = {63},
+  journalAbbreviation = {Sci. China Technol. Sci.},
+  key = {5IWGDN7U},
+  date = {2020-09-00 09/2020},
+  DOI = {10.1007/s11431-020-1582-8},
+  issue = {9},
+  title = {Monocular Depth Estimation Based On Deep Learning: An Overview},
+  year = {2020},
+  shortTitle = {Monocular Depth Estimation Based On Deep Learning},
+}
+@conferencePaper{vandijkHowNeuralNetworks2019,
+  rights = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+  author = {Van Dijk, Tom and De Croon, Guido},
+  conferenceName = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
+  ISBN = {978-1-7281-4803-8},
+  abstractNote = {Deep neural networks have lead to a breakthrough in depth estimation from single images. Recent work shows that the quality of these estimations is rapidly increasing. It is clear that neural networks can see depth in single images. However, to the best of our knowledge, no work currently exists that analyzes what these networks have learned.},
+  url = {https://ieeexplore.ieee.org/document/9009532/},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {2183-2191},
+  proceedingsTitle = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
+  language = {en},
+  place = {Seoul, Korea (South)},
+  date = {2019-10-00 10/2019},
+  key = {XMZVKHSM},
+  title = {How Do Neural Networks See Depth in Single Images?},
+  publisher = {IEEE},
+  DOI = {10.1109/ICCV.2019.00227},
+  year = {2019},
+  accessDate = {2025-01-04 22:19:24},
+}
+@journalArticle{khaldiOverviewSwarmRobotics2015a,
+  date = {2015-09-17 2015-09-17},
+  publicationTitle = {International Journal of Computer Applications},
+  issue = {2},
+  journalAbbreviation = {IJCA},
+  author = {Khaldi, Belkacem and Cherif, Foudil},
+  language = {en},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {31-37},
+  url = {http://www.ijcaonline.org/research/volume126/number2/khaldi-2015-ijca-906000.pdf},
+  key = {N2A9WKS6},
+  year = {2015},
+  abstractNote = {As an emergent research area by which swarm intelligence is applied to multi-robot systems; swarm robotics (a very particular and peculiar sub-area of collective robotics) studies how to coordinate large groups of relatively simple robots through the use of local rules. It focuses on studying the design of large amount of relatively simple robots, their physical bodies and their controlling behaviors. Since its introduction in 2000, several successful experimentations had been realized, and till now more projects are under investigations. This paper seeks to give an overview of this domain research; for the aim to orientate the readers, especially those who are newly coming to this research field.},
+  ISSN = {09758887},
+  DOI = {10.5120/ijca2015906000},
+  title = {An Overview of Swarm Robotics: Swarm Intelligence Applied to Multi-robotics},
+  shortTitle = {An Overview of Swarm Robotics},
+  accessDate = {2025-02-03 15:31:06},
+  volume = {126},
+}
