--- a/src/content/docs/en/monocular-depth-estimation.mdx
+++ b/src/content/docs/en/monocular-depth-estimation.mdx
@@ -1,7 +1,6 @@
 ---
 title: Monocular Depth Estimation
 description: Exploring the State of the Art
-bibliography: references.bib
 ---
 
 Research questions:
@@ -11,28 +10,28 @@ Research questions:
 
 | Year       | Aka          | Paper                                                                                                                                                                                                                | Ref in                                                                                                       |
 |------------|--------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|
-| (2005)     |              | [Learning Depth from Single Monocular Images](https://papers.nips.cc/paper_files/paper/2005/file/17d8da815fa21c57af9829fb0a869602-Paper.pdf)                                                                         | [ref in: @vandijkHowNeuralNetworks2019]                                                                      |
-| (Jun 2014) |              | @eigenDepthMapPrediction2014 [Depth Map Prediction from a Single Image using a Multi-Scale Deep Network](https://arxiv.org/pdf/1406.2283)                                                                            | [ref in: @bhoiMonocularDepthEstimation2019, @zhaoMonocularDepthEstimation2020, @eigenDepthMapPrediction2014] |
-| (Dec 2015) |              | [Predicting depth, surface normals and semantic labels with a common multi-scale convolutional architecture](https://arxiv.org/pdf/1411.4734)                                                                        | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Oct 2015) |              | [Holistically-Nested Edge Detection](https://arxiv.org/pdf/1504.06375)                                                                                                                                               | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Dec 2014) |              | [Deep Convolutional Neural Fields for Depth Estimation from a Single Image](https://arxiv.org/pdf/1411.6387)                                                                                                         | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Apr 2017) |              | [Learning Depth-Aware Deep Representations for Robotic Perception](https://ieeexplore.ieee.org/document/7778240)                                                                                                     | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Mar 2018) |              | [Structured Attention Guided Convolutional Neural Fields for Monocular Depth Estimation](https://arxiv.org/pdf/1803.11029)                                                                                           | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Jun 2015) |              | [Depth and surface normal estimation from monocular images using regression on deep features and hierarchical CRFs](https://openaccess.thecvf.com/content_cvpr_2015/papers/Li_Depth_and_Surface_2015_CVPR_paper.pdf) | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (May 2017) |              | [DeepLab: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected CRFs](https://arxiv.org/pdf/1606.00915)                                                                  | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Apr 2019) |              | [CAM-Convs: Camera-Aware Multi-Scale Convolutions for Single-View Depth](https://arxiv.org/pdf/1904.02028)                                                                                                           | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (Jul 2016) |              | [Unsupervised CNN for Single View Depth Estimation: Geometry to the Rescue](https://arxiv.org/pdf/1603.04992) (CNN)                                                                                                  | [ref in: @zhaoMonocularDepthEstimation2020, @vandijkHowNeuralNetworks2019]                                   |
-| (Apr 2019) |              | [Recurrent Neural Network for (Un-)supervised Learning of Monocular VideoVisual Odometry and Depth](https://arxiv.org/pdf/1904.07087) (RNN)                                                                          | [ref in: @zhaoMonocularDepthEstimation2020 ]                                                                 |
-| (Feb 2019) |              | [GEN-SLAM: Generative Modeling for Monocular Simultaneous Localization and Mapping](https://arxiv.org/pdf/1902.02086) (VAEs)                                                                                         | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (Apr 2017) | MonoDepth V1 | [Unsupervised Monocular Depth Estimation with Left-Right Consistency](https://arxiv.org/pdf/1609.03677)                                                                                                              | [ref in: @zhaoMonocularDepthEstimation2020, @vandijkHowNeuralNetworks2019]                                   |
-| (Mar 2018) |              | [GeoNet: Unsupervised Learning of Dense Depth, Optical Flow and Camera Pose](https://arxiv.org/pdf/1803.02276)                                                                                                       | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (Aug 2017) | SfMLearner   | [Unsupervised Learning of Depth and Ego-Motion from Video](https://arxiv.org/pdf/1704.07813)                                                                                                                         | [ref in: @zhaoMonocularDepthEstimation2020, @vandijkHowNeuralNetworks2019]                                   |
-| (Oct 2019) |              | [Unsupervised Scale-consistent Depth and Ego-motion Learning from Monocular Video](https://arxiv.org/pdf/1908.10553)                                                                                                 | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (May 2009) |              | [Make3D: Learning 3D Scene Structure from a Single Still Image](https://www.cs.cornell.edu/~asaxena/reconstruction3d/saxena_make3d_learning3dstructure.pdf)                                                          | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (Jul 2005) |              | [Automatic Photo Pop-up](https://dhoiem.cs.illinois.edu/publications/popup.pdf)                                                                                                                                      | [ref in: @zhaoMonocularDepthEstimation2020]                                                                  |
-| (Mar 2018) |              | [Monocular depth estimation using multi-scale continuous crfs as sequential deep networks](https://arxiv.org/pdf/1803.00891)                                                                                         | [ref in: @bhoiMonocularDepthEstimation2019]                                                                  |
-| (Dec 2017) | LKVOLearner  | [Learning Depth from Monocular Videos using Direct Methods](https://arxiv.org/pdf/1712.00175)                                                                                                                        | [ref in: @vandijkHowNeuralNetworks2019]                                                                      |
-| (May 2017) | Semodepth    | [Semi-Supervised Deep Learning for Monocular Depth Map Prediction](https://arxiv.org/pdf/1702.02706)                                                                                                                 | [ref in: @vandijkHowNeuralNetworks2019]                                                                      |
+| (2005)     |              | [Learning Depth from Single Monocular Images](https://papers.nips.cc/paper_files/paper/2005/file/17d8da815fa21c57af9829fb0a869602-Paper.pdf)                                                                         | [@vandijkHowNeuralNetworks2019]                                                                      |
+| (Jun 2014) |              | @eigenDepthMapPrediction2014 [Depth Map Prediction from a Single Image using a Multi-Scale Deep Network](https://arxiv.org/pdf/1406.2283)                                                                            | [@bhoiMonocularDepthEstimation2019; @zhaoMonocularDepthEstimation2020; @eigenDepthMapPrediction2014] |
+| (Dec 2015) |              | [Predicting depth, surface normals and semantic labels with a common multi-scale convolutional architecture](https://arxiv.org/pdf/1411.4734)                                                                        | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Oct 2015) |              | [Holistically-Nested Edge Detection](https://arxiv.org/pdf/1504.06375)                                                                                                                                               | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Dec 2014) |              | [Deep Convolutional Neural Fields for Depth Estimation from a Single Image](https://arxiv.org/pdf/1411.6387)                                                                                                         | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Apr 2017) |              | [Learning Depth-Aware Deep Representations for Robotic Perception](https://ieeexplore.ieee.org/document/7778240)                                                                                                     | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Mar 2018) |              | [Structured Attention Guided Convolutional Neural Fields for Monocular Depth Estimation](https://arxiv.org/pdf/1803.11029)                                                                                           | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Jun 2015) |              | [Depth and surface normal estimation from monocular images using regression on deep features and hierarchical CRFs](https://openaccess.thecvf.com/content_cvpr_2015/papers/Li_Depth_and_Surface_2015_CVPR_paper.pdf) | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (May 2017) |              | [DeepLab: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected CRFs](https://arxiv.org/pdf/1606.00915)                                                                  | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Apr 2019) |              | [CAM-Convs: Camera-Aware Multi-Scale Convolutions for Single-View Depth](https://arxiv.org/pdf/1904.02028)                                                                                                           | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (Jul 2016) |              | [Unsupervised CNN for Single View Depth Estimation: Geometry to the Rescue](https://arxiv.org/pdf/1603.04992) (CNN)                                                                                                  | [@zhaoMonocularDepthEstimation2020] [@vandijkHowNeuralNetworks2019]                                   |
+| (Apr 2019) |              | [Recurrent Neural Network for (Un-)supervised Learning of Monocular VideoVisual Odometry and Depth](https://arxiv.org/pdf/1904.07087) (RNN)                                                                          | [@zhaoMonocularDepthEstimation2020 ]                                                                 |
+| (Feb 2019) |              | [GEN-SLAM: Generative Modeling for Monocular Simultaneous Localization and Mapping](https://arxiv.org/pdf/1902.02086) (VAEs)                                                                                         | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (Apr 2017) | MonoDepth V1 | [Unsupervised Monocular Depth Estimation with Left-Right Consistency](https://arxiv.org/pdf/1609.03677)                                                                                                              | [@zhaoMonocularDepthEstimation2020, @vandijkHowNeuralNetworks2019]                                   |
+| (Mar 2018) |              | [GeoNet: Unsupervised Learning of Dense Depth, Optical Flow and Camera Pose](https://arxiv.org/pdf/1803.02276)                                                                                                       | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (Aug 2017) | SfMLearner   | [Unsupervised Learning of Depth and Ego-Motion from Video](https://arxiv.org/pdf/1704.07813)                                                                                                                         | [@zhaoMonocularDepthEstimation2020, @vandijkHowNeuralNetworks2019]                                   |
+| (Oct 2019) |              | [Unsupervised Scale-consistent Depth and Ego-motion Learning from Monocular Video](https://arxiv.org/pdf/1908.10553)                                                                                                 | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (May 2009) |              | [Make3D: Learning 3D Scene Structure from a Single Still Image](https://www.cs.cornell.edu/~asaxena/reconstruction3d/saxena_make3d_learning3dstructure.pdf)                                                          | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (Jul 2005) |              | [Automatic Photo Pop-up](https://dhoiem.cs.illinois.edu/publications/popup.pdf)                                                                                                                                      | [@zhaoMonocularDepthEstimation2020]                                                                  |
+| (Mar 2018) |              | [Monocular depth estimation using multi-scale continuous crfs as sequential deep networks](https://arxiv.org/pdf/1803.00891)                                                                                         | [@bhoiMonocularDepthEstimation2019]                                                                  |
+| (Dec 2017) | LKVOLearner  | [Learning Depth from Monocular Videos using Direct Methods](https://arxiv.org/pdf/1712.00175)                                                                                                                        | [@vandijkHowNeuralNetworks2019]                                                                      |
+| (May 2017) | Semodepth    | [Semi-Supervised Deep Learning for Monocular Depth Map Prediction](https://arxiv.org/pdf/1702.02706)                                                                                                                 | [@vandijkHowNeuralNetworks2019]                                                                      |
 
 
 Extra papers to support the idea of monocular depth estimation:
