--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -116,7 +116,7 @@
   volume = {63},
   journalAbbreviation = {Sci. China Technol. Sci.},
   key = {5IWGDN7U},
-  date = {2020-09-00 09/2020},
+  date = {2020-09-00 09-2020},
   DOI = {10.1007/s11431-020-1582-8},
   issue = {9},
   title = {Monocular Depth Estimation Based On Deep Learning: An Overview},
@@ -135,7 +135,7 @@
   proceedingsTitle = {2019 IEEE/CVF International Conference on Computer Vision (ICCV)},
   language = {en},
   place = {Seoul, Korea (South)},
-  date = {2019-10-00 10/2019},
+  date = {2019-10-00 2010-10-00},
   key = {XMZVKHSM},
   title = {How Do Neural Networks See Depth in Single Images?},
   publisher = {IEEE},
@@ -162,4 +162,13 @@
   shortTitle = {An Overview of Swarm Robotics},
   accessDate = {2025-02-03 15:31:06},
   volume = {126},
+}
+@journalArticle{saxenaLearningDepthSingle,
+  key = {J3QQAXIN},
+  title = {Learning Depth from Single Monocular Images},
+  year = {NA},
+  abstractNote = {We consider the task of depth estimation from a single monocular image. We take a supervised learning approach to this problem, in which we begin by collecting a training set of monocular images (of unstructured outdoor environments which include forests, trees, buildings, etc.) and their corresponding ground-truth depthmaps. Then, we apply supervised learning to predict the depthmap as a function of the image. Depth estimation is a challenging problem, since local features alone are insufﬁcient to estimate depth at a point, and one needs to consider the global context of the image. Our model uses a discriminatively-trained Markov Random Field (MRF) that incorporates multiscale local- and global-image features, and models both depths at individual points as well as the relation between depths at different points. We show that, even on unstructured scenes, our algorithm is frequently able to recover fairly accurate depthmaps.},
+  author = {Saxena, Ashutosh and Chung, Sung H and Ng, Andrew Y},
+  language = {en},
+  libraryCatalog = {Zotero},
 }
